--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Electric Meerkat</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p>Electric Meerkat is a software and game development firm in St. Louis. We like building fun games and useful software.</p> 
+
+            
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
