Changed header font-size

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Electric Meerkat</h1>
+            <h1 style = "font-size: 4em;" >Electric Meerkat</h1>
             <hr>
             <p>Electric Meerkat is a software and game development firm in St. Louis. We like building fun games and useful software.</p> 
 
