Changed to ovensparrow

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">What we do.</h2>
                 <hr class="light">
-                <p class="text-faded">Electric Meerkat builds and develops games and software. Whether it be for consultation, or just for fun. We are currently in the process of building our first game that should come out sometime this summer. </p>
+                <p class="text-faded">Ovensparrow builds and develops games and software. Whether it be for consultation, or just for fun. We are currently in the process of building our first game that should come out sometime this summer. </p>
             </div>
         </div>
     </div>
