--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #3F51B5;
+$theme-primary: #880E4F;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
