--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,15 +2,15 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://www.amazon.com/Ovensparrow-Russian-Facts/dp/B06XV1TT4Q/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1491019692&sr=1-1&keywords=Russian+facts" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Voice Bot
                             </div>
                             <div class="project-name">
-                                In Progress
+                                Russian Facts
                             </div>
                         </div>
                     </div>
